This document reflects changes from pypa2 to PA3.

- Pairs of words will be shown at the same time instead of one following the other.
The corresponding log change is:
- log.logMessage("STUDY_WORD_%d\tTRIAL_%d"%(word,state.trial),stamp)
+ log.logMessage("STUDY_PAIR_%d\tTRIAL_%d"%(pair, state.trial), stamp)

- The instructions file is changed to reflect that words appear in pairs, and that there may not necessarily be 6 pairs.
- The instructions file is changed to inform the subjects they should hit the space bar after saying the recalled word or "pass", to proceed to the next cue. That point is unclear with the present instructions.

- At the beginning of each trial, the experimenter is prompted to enter the current and electrode number, so the information can be saved in the log.

- For each trial, the decision is made randomly whether to stim the odd pairs or the even pairs. Then in recall pairs that were stimmed during study are stimmed again. The recall order is randomized to guarantee that 1) there are no two stims in a row, and 2) the last two study words are not among the first two cues.

- For each trial the experimenter is asked whether the trial will use stim or not.

- For each stim trial the experimenter will be asked whether a synchronization period of sync pulses should be performed prior to the start of the study period.

- By "stim during study" I mean stim for the full duration the word is on the screen (must be shorter than 2 seconds), and the time the screen is blank until the next word appears.

- By "stim during recall" I mean stim for the first 2 seconds of the period the cue word is on the screen.

- The algorithm to determine which words will be used will be modified to prevent words from ever being re-used (i.e., studied twice).